// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MCP Integration Tests (Express.js Bench) > fetch_symbol_metadata for known symbol 1`] = `
{
  "_token_count": 41,
  "_truncated": false,
  "count": 1,
  "symbols": [
    {
      "docstring": "/**
 * Create an express application.
 *
 * @return {Function}
 * @api public
 */",
      "kind": "function",
      "metadata": {},
      "name": "createApplication",
    },
  ],
}
`;

exports[`MCP Integration Tests (Express.js Bench) > find_references for "createApplication" 1`] = `
{
  "_token_count": 15,
  "_truncated": false,
  "referenceCount": 0,
  "references": [],
  "symbol": "createApplication",
}
`;

exports[`MCP Integration Tests (Express.js Bench) > get_code_overview (lib directory) 1`] = `
{
  "_cortex": {
    "more_available": true,
    "notes": [
      "[IMPORTANT·architecture] Lib Module Rule: All files in lib must be exported via express.js",
      "[IMPORTANT·architecture] Lib Module Rule: All files in lib must be exported via express.js",
      "[IMPORTANT·architecture] Lib Module Rule: All files in lib must be exported via express.js",
    ],
  },
  "_token_count": 61,
  "_truncated": false,
  "structure": {
    "children": [
      {
        "name": "application.js",
        "type": "file",
      },
      {
        "name": "dummy_0.js",
        "type": "file",
      },
      {
        "name": "dummy_1.js",
        "type": "file",
      },
      {
        "name": "dummy_10.js",
        "type": "file",
      },
      {
        "name": "dummy_11.js",
        "type": "file",
      },
      {
        "name": "dummy_12.js",
        "type": "file",
      },
      {
        "name": "dummy_13.js",
        "type": "file",
      },
      {
        "name": "dummy_14.js",
        "type": "file",
      },
      {
        "name": "dummy_15.js",
        "type": "file",
      },
      {
        "name": "dummy_16.js",
        "type": "file",
      },
      {
        "name": "dummy_17.js",
        "type": "file",
      },
      {
        "name": "dummy_18.js",
        "type": "file",
      },
      {
        "name": "dummy_19.js",
        "type": "file",
      },
      {
        "name": "dummy_2.js",
        "type": "file",
      },
      {
        "name": "dummy_20.js",
        "type": "file",
      },
      {
        "name": "dummy_21.js",
        "type": "file",
      },
      {
        "name": "dummy_22.js",
        "type": "file",
      },
      {
        "name": "dummy_23.js",
        "type": "file",
      },
      {
        "name": "dummy_24.js",
        "type": "file",
      },
      {
        "name": "dummy_25.js",
        "type": "file",
      },
      {
        "name": "dummy_26.js",
        "type": "file",
      },
      {
        "name": "dummy_27.js",
        "type": "file",
      },
      {
        "name": "dummy_28.js",
        "type": "file",
      },
      {
        "name": "dummy_29.js",
        "type": "file",
      },
      {
        "name": "dummy_3.js",
        "type": "file",
      },
      {
        "name": "dummy_30.js",
        "type": "file",
      },
      {
        "name": "dummy_31.js",
        "type": "file",
      },
      {
        "name": "dummy_32.js",
        "type": "file",
      },
      {
        "name": "dummy_33.js",
        "type": "file",
      },
      {
        "name": "dummy_34.js",
        "type": "file",
      },
      {
        "name": "dummy_35.js",
        "type": "file",
      },
      {
        "name": "dummy_36.js",
        "type": "file",
      },
      {
        "name": "dummy_37.js",
        "type": "file",
      },
      {
        "name": "dummy_38.js",
        "type": "file",
      },
      {
        "name": "dummy_39.js",
        "type": "file",
      },
      {
        "name": "dummy_4.js",
        "type": "file",
      },
      {
        "name": "dummy_40.js",
        "type": "file",
      },
      {
        "name": "dummy_41.js",
        "type": "file",
      },
      {
        "name": "dummy_42.js",
        "type": "file",
      },
      {
        "name": "dummy_43.js",
        "type": "file",
      },
      {
        "name": "dummy_44.js",
        "type": "file",
      },
      {
        "name": "dummy_45.js",
        "type": "file",
      },
      {
        "name": "dummy_46.js",
        "type": "file",
      },
      {
        "name": "dummy_47.js",
        "type": "file",
      },
      {
        "name": "dummy_48.js",
        "type": "file",
      },
      {
        "name": "dummy_49.js",
        "type": "file",
      },
      {
        "name": "dummy_5.js",
        "type": "file",
      },
      {
        "name": "dummy_50.js",
        "type": "file",
      },
      {
        "name": "dummy_51.js",
        "type": "file",
      },
      {
        "name": "dummy_52.js",
        "type": "file",
      },
      {
        "name": "dummy_53.js",
        "type": "file",
      },
      {
        "name": "dummy_54.js",
        "type": "file",
      },
      {
        "name": "dummy_55.js",
        "type": "file",
      },
      {
        "name": "dummy_56.js",
        "type": "file",
      },
      {
        "name": "dummy_57.js",
        "type": "file",
      },
      {
        "name": "dummy_58.js",
        "type": "file",
      },
      {
        "name": "dummy_59.js",
        "type": "file",
      },
      {
        "name": "dummy_6.js",
        "type": "file",
      },
      {
        "name": "dummy_7.js",
        "type": "file",
      },
      {
        "name": "dummy_8.js",
        "type": "file",
      },
      {
        "name": "dummy_9.js",
        "type": "file",
      },
      {
        "name": "express.js",
        "type": "file",
      },
      {
        "name": "request.js",
        "type": "file",
      },
      {
        "name": "response.js",
        "type": "file",
      },
      {
        "name": "router.js",
        "type": "file",
      },
      {
        "name": "utils.js",
        "type": "file",
      },
      {
        "name": "view.js",
        "type": "file",
      },
    ],
    "name": "lib",
    "type": "module",
  },
}
`;

exports[`MCP Integration Tests (Express.js Bench) > get_dependencies for lib/express.js 1`] = `
{
  "_token_count": 362,
  "_truncated": false,
  "dependencies": [
    {
      "id": "module:body_parser",
      "is_root": false,
      "name": "body-parser",
      "type": "module",
    },
    {
      "content_hash": "e88317bab46e29c6c2f5b01d443577e6c95e67435d300032bf09a7b94fbf72b5",
      "ext": ".js",
      "id": "file:lib_router_js",
      "language": "typescript",
      "line_count": 3,
      "module_id": "module:lib",
      "parse_status": "parsed",
      "path": "lib/router.js",
      "size_bytes": 73,
      "type": "file",
    },
  ],
  "file": "lib/express.js",
}
`;

exports[`MCP Integration Tests (Express.js Bench) > get_file_tree (root) 1`] = `
{
  "_token_count": 35,
  "_truncated": false,
  "structure": {
    "children": [
      {
        "children": [
          {
            "name": "... (+67 more files)",
            "type": "summary",
          },
        ],
        "name": "lib",
        "type": "module",
      },
    ],
    "name": "express",
    "type": "repository",
  },
}
`;

exports[`MCP Integration Tests (Express.js Bench) > query_symbol "createApplication" 1`] = `
{
  "_token_count": 96,
  "_truncated": false,
  "symbols": [
    {
      "docstring": "/**
 * Create an express application.
 *
 * @return {Function}
 * @api public
 */",
      "endCol": 1,
      "endLine": 17,
      "fileId": "file:lib_express_js",
      "filePath": "lib/express.js",
      "id": "symbol:d4499403_createApplication_function_12",
      "isExported": false,
      "kind": "function",
      "metadata": {},
      "modifiers": [],
      "name": "createApplication",
      "signature": "function createApplication()",
      "startCol": 0,
      "startLine": 12,
      "type": "symbol",
    },
  ],
}
`;

exports[`MCP Integration Tests (Express.js Bench) > search_codebase for "createApplication" 1`] = `
{
  "_token_count": 46,
  "_truncated": false,
  "matchCount": 1,
  "matches": [
    {
      "filePath": "lib/express.js",
      "id": "symbol:d4499403_createApplication_function_12",
      "kind": "function",
      "language": "typescript",
      "name": "createApplication",
    },
  ],
  "query": "createApplication",
}
`;

exports[`MCP Integration Tests (Express.js Bench) > smart_file_read (skeleton) lib/express.js 1`] = `
{
  "_cortex": {
    "more_available": true,
    "notes": [
      "[IMPORTANT·architecture] Lib Module Rule: All files in lib must be exported via express.js",
      "[IMPORTANT·architecture] Lib Module Rule: All files in lib must be exported via express.js",
      "[IMPORTANT·architecture] Test Architecture Note: This is a test note for lib/express.js",
    ],
  },
  "_token_count": 244,
  "_truncated": false,
  "content": "
var bodyParser = require('body-parser');
var router = require('./router');

/**
    /* [body] */
 */

function createApplication() {
  var app = function(req, res, next) {
    /* [body] */
  };
    /* [body] */
}

exports = module.exports = createApplication;
",
  "mode_used": "skeleton",
  "symbol_count": 4,
  "warnings": [],
}
`;
